# osunator

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  build_dataset.py  build_model.py  compute_norm_stats.py  config.py  dataset_cleanup.py  key_diagnostics.py  mdn.py  parsing.py  pipeline.md  predict_replay.py  pyproject.toml  select_stage1.py  test.py  train_model.py  training_data.py
data_meta/: hash_freq.csv  manifest.csv  manifest_79replays.csv  norm_stats.json  selected_replays.csv
debug/: battery.py  check_osr_roundtrip.py  check_zigzag.py  debug_speed.py  diagose_lateness.py  key_diagnostics.py  mian.py  temp.py  threshold_sweep.py
diagnostics/: battery.py  check_osr_roundtrip.py  check_zigzag.py  circle_active_check.py  compare_replays.py  debug_speed.py  diagnostics.md  diagose_lateness.py  key_diagnostics.py  threshold_sweep.py
eval/ab_study/: .gitignore  README.md  analysis.py  app.py  run.fish  smoke_test.py
eval/ab_study/static/: index.html  style.css
src/osunator/: cli.py  config.py  generate.py  manifest.py  mdn.py  model.py  parsing.py  train.py  training_data.py
src/osunator/data/: build.py  census.py  cleanup.py  norm_stats.py  select.py
